--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4,7 +4,8 @@
  font-family: Arial, Helvetica, sans-serif;
 
 }
-/* box-1 */
+
+
 .nav-bar { 
     background-color: #131921;
     height: 60px;
@@ -12,6 +13,7 @@
     color: white;
     align-items: center;  
     justify-content: space-evenly;  
+    
 }
 
 /* box-2 */
@@ -374,4 +376,19 @@ margin-left: 10px;
 
 .download-bill:hover {
 color: #1a98ff;
+}
+
+@media only screen and (max-width: 450px){
+
+    .nav-bar { 
+        background-color: #211318;
+        height: 60px;
+        display: flex;
+        color: white;
+        align-items: center;  
+        justify-content: space-evenly;  
+    }
+
+   
+
 }
